Aggiunto GIS in Miniere, Impianti e Aree. Corretto allineamento della tooltip.

--- a/CaveSerene/CaveSerene/Modules/Default/Impianto/ImpiantoIndex.cshtml
+++ b/CaveSerene/CaveSerene/Modules/Default/Impianto/ImpiantoIndex.cshtml
@@ -4,6 +4,24 @@
 
 <div id="GridDiv"></div>
 
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+      integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+      crossorigin="" />
+
+<!-- Make sure you put this AFTER Leaflet's CSS -->
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+        crossorigin=""></script>
+
+@*https://openlayers.org/en/latest/doc/quickstart.html*@
+
+<style>
+    #mapid {
+        height: 340px;
+        width: 480px;
+    }
+</style>
+
 <script type="text/javascript">
     jQuery(function () {
         new CaveSerene.Default.ImpiantoGrid($('#GridDiv'), {}).init();
