--- a/CaveSerene/CaveSerene/Modules/Default/Area/AreaIndex.cshtml
+++ b/CaveSerene/CaveSerene/Modules/Default/Area/AreaIndex.cshtml
@@ -13,6 +13,9 @@
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.js"></script>
+
 @*https://openlayers.org/en/latest/doc/quickstart.html*@
 
 <style>
